<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
        <ImageView
            android:id="@+id/avatar"
            android:layout_width="132dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"/>
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_top"/>
                <Spinner
                    android:id="@+id/top_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/title_top"
                    android:spinnerMode="dialog"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/text_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_accessories"/>
                <Spinner
                    android:id="@+id/accessories_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/title_accessories"
                    android:spinnerMode="dialog"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/text_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_hat_color"/>
                <Spinner
                    android:id="@+id/hat_color_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/title_hat_color"
                    android:spinnerMode="dialog"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/text_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_hair_color"/>
                <Spinner
                    android:id="@+id/hair_color_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/title_hair_color"
                    android:spinnerMode="dialog"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/text_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_facial_hair"/>
                <Spinner
                    android:id="@+id/facial_hair_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/title_facial_hair"
                    android:spinnerMode="dialog"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/text_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_facial_hair_color"/>
                <Spinner
                    android:id="@+id/facial_hair_color_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/title_facial_hair_color"
                    android:spinnerMode="dialog"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/text_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_clothes"/>
                <Spinner
                    android:id="@+id/clothe_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/title_clothes"
                    android:spinnerMode="dialog"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/text_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_clothe_color"/>
                <Spinner
                    android:id="@+id/clothe_color_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/title_clothe_color"
                    android:spinnerMode="dialog"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/text_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_clothe_graphic"/>
                <Spinner
                    android:id="@+id/clothe_graphic_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/title_clothe_graphic"
                    android:spinnerMode="dialog"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/text_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_eyes"/>
                <Spinner
                    android:id="@+id/eye_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/title_eyes"
                    android:spinnerMode="dialog"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/text_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_eyebrow"/>
                <Spinner
                    android:id="@+id/eyebrow_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/title_eyebrow"
                    android:spinnerMode="dialog"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/text_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_mouth"/>
                <Spinner
                    android:id="@+id/mouth_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/title_mouth"
                    android:spinnerMode="dialog"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/text_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_skin"/>
                <Spinner
                    android:id="@+id/skin_color_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/title_skin"
                    android:spinnerMode="dialog"/>
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>